exports[`<Dashboard /> renders correctly with black theme 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ gLSVNS">
    <a
      className="sc-EHOje jOaPbK"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb jYevDf">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa beLtwZ"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac iSIfGR">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC ifkPGC"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with black-light theme 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ gLSVNS">
    <a
      className="sc-EHOje jOaPbK"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb jYevDf">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa beLtwZ"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac eZHpDK">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC dYGDnc"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with blue theme 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ jrHiKF">
    <a
      className="sc-EHOje iStSoG"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb LwRLE">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac iSIfGR">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC ifkPGC"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with blue-light theme 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ jrHiKF">
    <a
      className="sc-EHOje iStSoG"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb LwRLE">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac eZHpDK">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC dYGDnc"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with fixed and sidebarMini options 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ dpGHpC">
    <a
      className="sc-EHOje iStSoG"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb LwRLE">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac cNPHju">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC fOBFjv"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with fixed option 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ dpGHpC">
    <a
      className="sc-EHOje iStSoG"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb LwRLE">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac cNPHju">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC fOBFjv"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with fixed, initialCollapse, and sidebarMini options 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ dpGHpC">
    <a
      className="sc-EHOje bCgDJo"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM jqHeMk"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw bXXxci"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb jVUgSf">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac dwXnaN">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC dtDRty"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with green theme 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ jrHiKF">
    <a
      className="sc-EHOje bDexaS"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb eEquTz">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa gicuGo"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac iSIfGR">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC ifkPGC"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with green-light theme 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ jrHiKF">
    <a
      className="sc-EHOje bDexaS"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb eEquTz">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa gicuGo"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac eZHpDK">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC dYGDnc"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with initialCollapse and sidebarMini options 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ jrHiKF">
    <a
      className="sc-EHOje bCgDJo"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM jqHeMk"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw bXXxci"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb jVUgSf">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac eJNHJs">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC fhzCXG"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with initialCollapse option 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ jrHiKF">
    <a
      className="sc-EHOje iStSoG"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb LwRLE">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac lfwlYz">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC bPvGlc"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with no options 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ jrHiKF">
    <a
      className="sc-EHOje iStSoG"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb LwRLE">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac iSIfGR">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC ifkPGC"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with purple theme 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ jrHiKF">
    <a
      className="sc-EHOje jypGmw"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb kDuBPx">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa cKgFyI"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac iSIfGR">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC ifkPGC"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with purple-light theme 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ jrHiKF">
    <a
      className="sc-EHOje jypGmw"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb kDuBPx">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa cKgFyI"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac eZHpDK">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC dYGDnc"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with red theme 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ jrHiKF">
    <a
      className="sc-EHOje cZVIGq"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb beTifj">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa jxNjZi"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac iSIfGR">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC ifkPGC"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with red-light theme 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ jrHiKF">
    <a
      className="sc-EHOje cZVIGq"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb beTifj">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa jxNjZi"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac eZHpDK">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC dYGDnc"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with sidebarMini option 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ jrHiKF">
    <a
      className="sc-EHOje iStSoG"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb LwRLE">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac iSIfGR">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC ifkPGC"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with yellow theme 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ jrHiKF">
    <a
      className="sc-EHOje iyJFGS"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb cXBSaj">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa dDYcHZ"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac iSIfGR">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC ifkPGC"
    name="content-wrapper" />
</div>
`;

exports[`<Dashboard /> renders correctly with yellow-light theme 1`] = `
<div
  className="sc-dVhcbM hwNSaB">
  <header
    className="sc-dxgOiQ jrHiKF">
    <a
      className="sc-EHOje iyJFGS"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb cXBSaj">
      <button
        className="fa fa-bars sc-ifAKCX eKOPsl sc-bdVaJa dDYcHZ"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH cOlCUL"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac eZHpDK">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC dYGDnc"
    name="content-wrapper" />
</div>
`;
